[gd_scene load_steps=8 format=2]

[ext_resource path="res://Characters/enemy/Thorny.gd" type="Script" id=1]
[ext_resource path="res://Characters/enemy/Parkour_Mob.png" type="Texture" id=2]
[ext_resource path="res://Characters/Player/Effects.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10.6451, 9.80361 )

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/flash_modifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.429, 0.0 ]
}

[node name="Area2D" type="Area2D" groups=["Enemy"]]
script = ExtResource( 1 )

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( -10.7785, -16.1529 )
scale = Vector2( 0.0837345, 0.101094 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
modulate = Color( 1, 0.890196, 0, 0 )
position = Vector2( -0.527283, -0.75 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="." groups=["Enemy"]]
material = SubResource( 2 )
position = Vector2( 0.275628, 0.479543 )
scale = Vector2( 0.03, 0.03 )
frames = SubResource( 3 )
playing = true

[node name="Enemy_effects" type="AnimationPlayer" parent="."]
anims/Stagger = SubResource( 4 )
script = ExtResource( 3 )

[node name="DamageTimer" type="Timer" parent="."]

[node name="Damage" type="AudioStreamPlayer2D" parent="."]
pitch_scale = 0.81

[connection signal="body_entered" from="." to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_DamageTimer_timeout"]
